Adds detailed state to json output of status command
Closes #946
